* NEW [cmake] setting in cmake for msquic has been done.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ option (BUILD_NNG_PROXY "Build nng proxy" ON)
 option (BUILD_ZMQ_GATEWAY "Build zmq gateway" OFF)
 option (BUILD_BENCH "Build nano-bench" OFF)
 option (ENABLE_JWT "Enable jwt library" OFF)
+option (ENABLE_QUIC "Enable msquic library" ON)
 
 set (NNG_PROTO_MQTT_BROKER  ON)
 set (NNG_TRANSPORT_MQTT_BROKER_TCP ON)
@@ -192,6 +193,11 @@ if (ENABLE_JWT)
   add_definitions(-DSUPP_JWT)
 endif (ENABLE_JWT)
 
+if (ENABLE_QUIC)
+  add_subdirectory(extern/msquic)
+  add_definitions(-DSUPP_QUIT)
+endif (ENABLE_QUIC)
+
 add_subdirectory(nng)
 add_subdirectory(nanolib)
 add_subdirectory(nanomq)
@@ -202,3 +208,7 @@ add_dependencies(nanomq nanolib)
 if (ENABLE_JWT) 
   add_dependencies(nanomq l8w8jwt)
 endif (ENABLE_JWT)
+
+if (ENABLE_QUIC)
+  add_dependencies(nanomq msquic)
+endif (ENABLE_QUIC)
